--- a/lib/my/Makefile
+++ b/lib/my/Makefile
@@ -5,33 +5,10 @@
 ## makefile
 ##
 
-SRC	=	my_compute_power_rec.c	\
-		my_strlen.c  \
-		my_compute_square_root.c  \
-		my_find_prime_sup.c  \
-		my_get_nbr.c  \
-		my_is_prime.c  \
-		my_isneg.c  \
+SRC	=	my_strlen.c  \
 		my_put_nbr.c  \
 		my_putchar.c  \
 		my_putstr.c  \
-		my_revstr.c  \
-		my_str_isalpha.c  \
-		my_str_islower.c  \
-		my_str_isnum.c  \
-		my_str_isprintable.c	\
-		my_strcapitalize.c  \
-		my_strcmp.c  \
-		my_strcpy.c  \
-		my_strlowcase.c  \
-		my_strncmp.c  \
-		my_strncpy.c  \
-		my_strstr.c	\
-		my_strupcase.c 	\
-		my_swap.c	\
-		my_getsign.c    \
-		my_putnbr_base.c	\
-		mini_printf.c	\
 		cat.c	\
 
 OBJ	=	$(SRC:.c=.o)
